# history-of-mexico-scraper

history_of_mexico_scraper/: README.md  pyproject.toml
history_of_mexico_scraper/history_of_mexico_scraper/: history_of_mexico_scraper.py
history_of_mexico_scraper/tests/: test_history_of_mexico_scraper.py
